# dramasub

./: .gitignore  LICENSE  README.md  pyproject.toml
dramasub/: __init__.py  __main__.py  constants.py  formatters.py
tests/functional/: test_on_short_audio.py  test_translator.py
